[gd_scene load_steps=12 format=3 uid="uid://b1v3kijl2hqrp"]

[ext_resource type="Script" path="res://game/scripts/main_menu/main_menu.gd" id="1_kukyf"]
[ext_resource type="Theme" uid="uid://dtej56pljgyf2" path="res://assets/ui_theme/temp_theme.tres" id="2_lmcxa"]
[ext_resource type="Texture2D" uid="uid://bv8hiy0lxln5m" path="res://game/sprites/dev_bg.png" id="3_0tvf5"]
[ext_resource type="Texture2D" uid="uid://batlxecmpr6b1" path="res://game/sprites/bug_hole_opening.png" id="4_6mmkk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8x00y"]
atlas = ExtResource("4_6mmkk")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvojd"]
atlas = ExtResource("4_6mmkk")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b34re"]
atlas = ExtResource("4_6mmkk")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7yel"]
atlas = ExtResource("4_6mmkk")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ewxim"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x00y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvojd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b34re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7yel")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_wte10"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x00y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x00y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x00y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x00y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x00y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvojd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b34re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7yel")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_uux4d"]
font_size = 48

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_kukyf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lmcxa")

[node name="TextureRect" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0tvf5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(404, 183)
scale = Vector2(3.16, 3.16)
sprite_frames = SubResource("SpriteFrames_ewxim")
animation = &"open"
autoplay = "open"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(740, 491)
scale = Vector2(3.16, 3.16)
sprite_frames = SubResource("SpriteFrames_wte10")
animation = &"open"
autoplay = "open"
flip_h = true

[node name="Panel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "INFESTATION"
label_settings = SubResource("LabelSettings_uux4d")
horizontal_alignment = 1

[node name="START_Button" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "START GAME"

[node name="CREDITS_Button" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "CREDITS"

[node name="EXIT_Button" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "EXIT GAME"

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 28.0
offset_top = 392.0
offset_right = 299.0
offset_bottom = 622.0
text = "Controls: 

Movement: WASD
Change weapon to:
- Melee: 1
- Ranged: 2
- Bomb: 3
Attack: Left Click
Aim: Cursor
Pause: ESC"
fit_content = true

[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/START_Button" to="." method="_start_button_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/CREDITS_Button" to="." method="_credits_button_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/EXIT_Button" to="." method="_exit_button_pressed"]
